--- a/config/database.yml
+++ b/config/database.yml
@@ -79,8 +79,11 @@ test:
 # Read https://guides.rubyonrails.org/configuring.html#configuring-a-database
 # for a full overview on how database connection configuration can be specified.
 #
+# production:
+#   <<: *default
+#   database: Ishi_Backend_production
+#   username: Ishi_Backend
+#   password: <%= ENV["ISHI_BACKEND_DATABASE_PASSWORD"] %>
 production:
   <<: *default
-  database: Ishi_Backend_production
-  username: Ishi_Backend
-  password: <%= ENV["ISHI_BACKEND_DATABASE_PASSWORD"] %>
+  url: <%= ENV['DATABASE_URL'] %>
