--- a/config/database.yml
+++ b/config/database.yml
@@ -86,5 +86,5 @@ test:
 #   password: <%= ENV["ISHI_BACKEND_DATABASE_PASSWORD"] %>
 production:
   <<: *default
-  database: Ishi_Backend
+  # database: Ishi_Backend
   url: <%= ENV['DATABASE_URL'] %>
